# Cache-Simulator

./: .gitignore  CMakeLists.txt  README.md  tests.out
.github/workflows/: cmake-multi-platform.yml
include/: bus.hpp  cache.hpp  cache_controller.hpp  memory_controller.hpp  parser.hpp  processor.hpp  statistics.hpp  trace.hpp  write_buffer.hpp
include/protocols/: dragon.hpp  mesi.hpp  mesif.hpp  moesi.hpp  protocol.hpp
scripts/: generate_outputs.py  generate_testcases.py
src/: bus.cpp  cache.cpp  main.cpp  memory_controller.cpp  parser.cpp  statistics.cpp  trace.cpp  write_buffer.cpp
src/protocols/: dragon.cpp  mesi.cpp  mesif.cpp  moesi.cpp
tests/custom/: custom_2.data
tests/memory_test_simple/: memory_test_simple_0.data  memory_test_simple_1.data  memory_test_simple_2.data
tests/no_loads_no_stores/: no_loads_no_stores_1.data
tests/read_hit_test/: read_hit_test_1.data
tests/read_miss_eviction/: read_miss_eviction_0.data  read_miss_eviction_1.data
tests/scripts/: test_mesi.py
tests/simple_custom/: simple_custom_1.data
tests/simple_custom2/: simple_custom2_0.data  simple_custom2_1.data
tests/simple_custom3/: simple_custom3_0.data  simple_custom3_1.data
tests/write_miss_eviction/: write_miss_eviction_0.data
